# usb-phoenix

./: .gitignore  Refactor_AcreetionOS-USB-Flasher_RoadMap.md  readme.md
acreetionos-flashing-utility-main/: README.md  package-lock.json
acreetionos-flashing-utility-main/AcreetionOS-Flashing-Utiliy/: NOTES  ai  index.html  index.html.bak  index.html.txt  main.js  main.js.bak  main.js.txt  package-lock.json  package.json  package.json.txt  renderer.js  renderer.js.bak  renderer.js.txt
docs/: project-guide.md  project-overview.md
tauri-hello-world/: .gitignore  GETTING_STARTED.md  README.md  setup.sh
tauri-hello-world/src/: index.html  script.js  style.css
tauri-hello-world/src-tauri/: Cargo.toml  tauri.conf.json
tauri-hello-world/src-tauri/src/: main.rs
