[package]
name = "tauri-hello-world"
version = "0.1.0"
description = "A simple Tauri Hello World proof-of-concept for AcreetionOS USB Flasher"
authors = ["AcreetionOS Team"]
license = "MIT"
repository = "https://github.com/acreetionos/usb-phoenix"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "os-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1.4"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]